--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-phonenumber-field==5.0.0
 gunicorn==20.0.4
 phonenumbers==8.12.11
 Pillow==8.0.0
+psycopg2==2.8.6
 pytz==2020.1
 sqlparse==0.4.1
 whitenoise==5.2.0
